--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "14.1.4",
     "next-image-export-optimizer": "^1.12.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
