--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next build && next-image-export-optimizer"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "gray-matter": "^4.0.3",
     "next": "14.2.0",
     "next-image-export-optimizer": "^1.12.3",
@@ -19,14 +20,14 @@
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.0"
+    "typescript": "^5"
   }
 }
