--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "clsx": "^2.1.0",
     "gray-matter": "^4.0.3",
     "next": "14.2.0",
     "next-image-export-optimizer": "^1.12.3",
