--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.1",
+    "@types/mdx": "^2.0.13",
     "clsx": "^2.1.0",
     "gray-matter": "^4.0.3",
     "next": "14.2.0",
     "next-image-export-optimizer": "^1.12.3",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
-    "react-dom": "^18",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
