--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "next-jade",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next-image-export-optimizer"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.1.3",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.1",
-    "@types/mdx": "^2.0.13",
-    "clsx": "^2.1.0",
-    "gray-matter": "^4.0.3",
-    "next": "14.2.0",
-    "next-image-export-optimizer": "^1.12.3",
-    "next-mdx-remote": "^4.4.1",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+   "name": "next-jade",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "export": "next build && next-image-export-optimizer"
+   },
+   "dependencies": {
+      "@heroicons/react": "^2.1.3",
+      "@mdx-js/loader": "^3.0.1",
+      "@mdx-js/react": "^3.0.1",
+      "@next/mdx": "^14.2.1",
+      "@types/mdx": "^2.0.13",
+      "clsx": "^2.1.0",
+      "gray-matter": "^4.0.3",
+      "next": "14.2.0",
+      "next-image-export-optimizer": "^1.12.3",
+      "next-mdx-remote": "^4.4.1",
+      "react": "^18",
+      "react-dom": "^18"
+   },
+   "devDependencies": {
+      "@types/node": "^20",
+      "@types/react": "^18",
+      "@types/react-dom": "^18",
+      "autoprefixer": "^10.0.1",
+      "eslint": "^8",
+      "eslint-config-next": "14.2.0",
+      "postcss": "^8",
+      "prettier": "3.2.5",
+      "tailwindcss": "^3.3.0",
+      "typescript": "^5"
+   }
 }
