--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
    "extends": "next/core-web-vitals",
    "rules": {
-      "indent": ["error", 3]
+      "react/no-unescaped-entities": "off"
    }
 }
