--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "wrangler": "^3.50.0"
    },
    "devDependencies": {
+      "@tailwindcss/typography": "^0.5.12",
       "@types/node": "^20",
       "@types/react": "^18",
       "@types/react-dom": "^18",
