--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
       "@types/mdx": "^2.0.13",
       "clsx": "^2.1.0",
       "gray-matter": "^4.0.3",
+      "html-react-parser": "^5.1.10",
+      "jsdom": "^24.0.0",
       "next": "14.2.0",
       "next-mdx-remote": "^4.4.1",
       "react": "^18",
