--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
       "dev": "next dev",
       "build": "next build",
       "start": "next start",
-      "lint": "next lint",
-      "export": "next build && next-image-export-optimizer"
+      "lint": "next lint"
    },
    "dependencies": {
       "@cloudflare/next-on-pages": "^1.11.0",
@@ -17,10 +16,10 @@
       "@mdx-js/react": "^3.0.1",
       "@next/mdx": "^14.2.1",
       "@types/mdx": "^2.0.13",
+      "cheerio": "1.0.0-rc.12",
       "clsx": "^2.1.0",
       "gray-matter": "^4.0.3",
       "html-react-parser": "^5.1.10",
-      "jsdom": "^24.0.0",
       "next": "14.2.0",
       "next-mdx-remote": "^4.4.1",
       "react": "^18",
