--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "clsx": "^2.1.0",
       "gray-matter": "^4.0.3",
       "html-react-parser": "^5.1.10",
+      "html-to-text": "^9.0.5",
       "next": "14.2.0",
       "next-mdx-remote": "^4.4.1",
       "react": "^18",
