--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
+      "pages-dev": "exec wrangler pages dev .vercel/output/static",
       "pages-build": "exec next-on-pages",
       "pages-deploy": "exec wrangler pages deploy .vercel/output/static"
    },
