--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
    "dependencies": {
       "@cloudflare/next-on-pages": "^1.11.0",
       "@cloudflare/workers-types": "^4.20240405.0",
+      "@ducanh2912/next-pwa": "^10.2.6",
       "@heroicons/react": "^2.1.3",
       "@mdx-js/loader": "^3.0.1",
       "@mdx-js/react": "^3.0.1",
@@ -42,6 +43,7 @@
       "prettier": "3.2.5",
       "prettier-plugin-tailwindcss": "^0.5.13",
       "tailwindcss": "^3.3.0",
-      "typescript": "^5"
+      "typescript": "^5",
+      "webpack": "^5.91.0"
    }
 }
