--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ yarn-error.log*
 next-env.d.ts
 .wrangler
 .env
+
+# pwa
+/public/sw.js
+/public/sw.js.map
+/public/workbox-*.js
+/public/workbox-*.js.map
+/public/fallback-development.js
