Update Cloudflare Pages script names

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
-      "pages-dev": "exec wrangler pages dev .vercel/output/static",
-      "pages-build": "exec next-on-pages",
-      "pages-deploy": "exec wrangler pages deploy .vercel/output/static"
+      "pages:dev": "exec wrangler pages dev .vercel/output/static",
+      "pages:build": "exec next-on-pages",
+      "pages:deploy": "exec wrangler pages deploy .vercel/output/static"
    },
    "dependencies": {
       "@cloudflare/next-on-pages": "^1.11.0",
