--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
       "clsx": "^2.1.1",
       "gray-matter": "^4.0.3",
       "html-react-parser": "^5.1.10",
-      "next": "14.2.0",
+      "next": "15.0.0-rc.0",
       "next-mdx-remote": "^4.4.1",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
+      "react": "19.0.0-rc-f994737d14-20240522",
+      "react-dom": "19.0.0-rc-f994737d14-20240522",
       "sanitize-html": "^2.13.0",
       "wrangler": "^3.57.1"
    },
