Install & use React compiler

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
       "@mdx-js/react": "^3.0.1",
       "@next/mdx": "^14.2.3",
       "@types/mdx": "^2.0.13",
+      "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
       "cheerio": "1.0.0-rc.12",
       "clsx": "^2.1.1",
+      "eslint-plugin-react-compiler": "0.0.0-experimental-c8b3f72-20240517",
       "gray-matter": "^4.0.3",
       "html-react-parser": "^5.1.10",
       "next": "15.0.0-rc.0",
