--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
    "extends": "next/core-web-vitals",
+   "plugins": ["eslint-plugin-react-compiler"],
    "rules": {
-      "react/no-unescaped-entities": "off"
+      "react/no-unescaped-entities": "off",
+      "react-compiler/react-compiler": "error"
    }
 }
