--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
       "eslint-plugin-react-compiler": "0.0.0-experimental-c8b3f72-20240517",
       "gray-matter": "^4.0.3",
       "html-react-parser": "^5.1.10",
-      "next": "15.0.0-rc.0",
-      "next-mdx-remote": "^4.4.1",
+      "next": "15.0.0-canary.1",
+      "next-mdx-remote": "^5.0.0",
       "react": "19.0.0-rc-f994737d14-20240522",
       "react-dom": "19.0.0-rc-f994737d14-20240522",
       "sanitize-html": "^2.13.0",
@@ -34,13 +34,13 @@
    },
    "devDependencies": {
       "@tailwindcss/typography": "^0.5.13",
-      "@types/node": "^20.12.12",
+      "@types/node": "^20.12.13",
       "@types/react": "^18.3.3",
       "@types/react-dom": "^18.3.0",
       "@types/sanitize-html": "^2.11.0",
       "autoprefixer": "^10.4.19",
       "eslint": "^8.57.0",
-      "eslint-config-next": "14.2.0",
+      "eslint-config-next": "14.2.3",
       "postcss": "^8.4.38",
       "prettier": "3.2.5",
       "prettier-plugin-tailwindcss": "^0.5.14",
