Add `next-on-pages` plugin for ESLint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
    "extends": "next/core-web-vitals",
-   "plugins": ["eslint-plugin-react-compiler"],
+   "plugins": ["eslint-plugin-react-compiler", "eslint-plugin-next-on-pages"],
    "rules": {
       "react/no-unescaped-entities": "off",
       "react-compiler/react-compiler": "error"
