--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
    "version": "0.1.0",
    "private": true,
    "scripts": {
-      "dev": "next dev --turbo",
+      "dev": "next dev",
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
@@ -25,10 +25,10 @@
       "eslint-plugin-react-compiler": "0.0.0-experimental-c8b3f72-20240517",
       "gray-matter": "^4.0.3",
       "html-react-parser": "^5.1.10",
-      "next": "15.0.0-canary.19",
+      "next": "canary",
       "next-mdx-remote": "^5.0.0",
-      "react": "19.0.0-rc-f994737d14-20240522",
-      "react-dom": "19.0.0-rc-f994737d14-20240522",
+      "react": "rc",
+      "react-dom": "rc",
       "sanitize-html": "^2.13.0",
       "wrangler": "^3.60.2"
    },
