--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
       "@mdx-js/loader": "^3.0.1",
       "@mdx-js/react": "^3.0.1",
       "@next/mdx": "^14.2.4",
+      "@radix-ui/react-dropdown-menu": "^2.0.6",
       "@types/mdx": "^2.0.13",
       "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
       "cheerio": "1.0.0-rc.12",
