--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
       "prettier-plugin-tailwindcss": "^0.6.5",
       "tailwindcss": "^3.4.4",
       "typescript": "^5.5.3",
+      "vercel": "34.3.0",
       "webpack": "^5.92.1"
    }
 }
